--- a/package.json
+++ b/package.json
@@ -51,8 +51,9 @@
             "vaul": "^1.1.2"
       },
       "devDependencies": {
+            "@svgr/core": "^8.1.0",
             "@tailwindcss/postcss": "^4.1.16",
-            "@tailwindcss/vite": "^4.1.16",
+            "@tailwindcss/vite": "^4.1.18",
             "@types/node": "^20.10.0",
             "@types/react": "^19.2.2",
             "@types/react-dom": "^19.2.2",
@@ -61,7 +62,8 @@
             "autoprefixer": "^10.4.21",
             "postcss": "^8.5.6",
             "tailwindcss": "^4.1.16",
-            "vite": "6.3.5"
+            "vite": "6.3.5",
+            "vite-plugin-svgr": "^4.5.0"
       },
       "scripts": {
             "dev": "vite",
