--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
       "version": "0.1.0",
       "private": true,
       "dependencies": {
+            "@niivue/niivue": "^0.67.0",
             "@radix-ui/react-accordion": "^1.2.3",
             "@radix-ui/react-alert-dialog": "^1.1.6",
             "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -50,7 +51,8 @@
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
             "three": "^0.182.0",
-            "vaul": "^1.1.2"
+            "vaul": "^1.1.2",
+            "vtk.js": "^34.16.3"
       },
       "devDependencies": {
             "@svgr/core": "^8.1.0",
